--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <div class="portfolio-layer">
                     <h4>NotePad Application</h4>
                     
-                    <a href=https://srivathsanp23.github.io/Todo_list_app/" target="_blank"><i class="bx bx-link"></i></a>
+                    <a href="https://srivathsanp23.github.io/Todo_list_app/" target="_blank"><i class="bx bx-link"></i></a>
                 </div>
             </div>
 
