--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   
             </div>
             <a href="https://drive.google.com/file/d/1OdokXYGONlxI-RoTQ6MISZeBi6EPeOtr/view" target="_blank" class="btn" download>Download Resume</a><br><br>
-            <a href="#about" class="btn">Read More</a>
+            <a href="#about" class="btn" style="background:#00ffaa;">Read More</a>
         </div>
        
 
