--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      <section class="home" id="home">
         <div class="home-content">
             <h3>Hello, I'm</h3>
-            <h1>Srivathsan P(Gay) </h1>
+            <h1>Srivathsan P</h1>
             <h3>I'm a <span class="multiple-text"></span></h3>
             <p>As a skilled front-end developer with AngularJS experience and a proficient Java programmer, 
             <br>I am transitioning into data science, leveraging my technical skills and passion for innovation. </p>
