--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- about section design -->
      <section class="about" id="about">
         <div class="about-img">
-            <img src="images/about.png" alt="">
+<!--             <img src="images/about.png" alt=""> -->
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
