--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="https://x.com/Srivathsan2305" target="_blank"><i class="devicon-twitter-original"></i></a>
                   
             </div>
-            <a href="https://drive.google.com/file/d/1OdokXYGONlxI-RoTQ6MISZeBi6EPeOtr/view" target="_blank" class="btn" download>Download Resume</a><br><br>
+            <a href="https://drive.google.com/file/d/16mKPNgnz7Ih3u3n_Y7ytCbXbPZC680N-/view?usp=sharing" target="_blank" class="btn" download>Download Resume</a><br><br>
             <a href="#about" class="btn" style="background-color:#00ffaa;">Read More</a>
         </div>
        
