--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
     <!-- home section design -->
      <section class="home" id="home">
+        <div class="home-img">
+            <img src="images/imageshome.png" alt="">
+        </div>
         <div class="home-content">
             <h3>Hello, I'm</h3>
             <h1>Srivathsan P</h1>
@@ -53,9 +56,7 @@
         </div>
        
 
-        <div class="home-img">
-            <img src="images/home.png" alt="">
-        </div>
+        
      </section>
 
 
