--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h3>Hello, I'm</h3>
             <h1>Srivathsan P</h1>
             <h3>I'm a <span class="multiple-text"></span></h3>
-            <p>As a skilled front-end developer with AngularJS experience and a proficient Java programmer, 
+            <p>As a skilled front-end developer with AngularJS experience and a proficient programmer, 
             <br>I am transitioning into data science, leveraging my technical skills and passion for innovation. </p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/srivathsan-p-106416226/" target="_blank"><i class='bx bxl-linkedin'></i></a>
